--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "next": "13.1.1",
     "pg": "^8.8.0",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "semantic-ui-css": "^2.5.0",
+    "semantic-ui-react": "^2.1.4"
   },
   "devDependencies": {
     "@types/node": "18.11.18",
